Remove unneeded position: relative from control cell divs; as far as I can tell none of them actually need to establish a new containing block.  This fixes a rendering problem on IE7.
Also move photo choosing link outside of relatively positioned box for 
photo set popup to avoid a similar issue.

--- a/dumbhippo/trunk/server/web/css2/account-positions.css
+++ b/dumbhippo/trunk/server/web/css2/account-positions.css
@@ -9,7 +9,6 @@
 }
 
 #dhContentColumn .dh-form-table .dh-control-cell .dh-control-cell-div {
-	position:		relative;
 	width:			358px;
 }
 
